# Simulation_on_QEC_with_reconfigurable_atom_arrays

./: LICENSE  MultiSurfaceCode.py  README.md  SurfaceCodePerfomance copy.ipynb  SurfaceCodePerfomance.ipynb  build_circuit.py  combine_circuits.py  decoder.py  dummy.py  main.py  placeholder.py  pyproject.toml  surface_code.py  surface_code_results_0.pkl  surface_code_results_1.pkl  surface_code_results_2.pkl  test copy.ipynb  test.ipynb  test_multi.ipynb  unrotated_surface_code.py
src/AtomLogic/: __init__.py  pauli.py  surface_code.py  visualizer.py
src/AtomLogic/core/: error_model.py  lattice.py  logical_block.py  physical_qubit.py
src/AtomLogic/decoder/: simple_decoder.py
src/AtomLogic/experiments/: run_transversal_cnot.py
src/AtomLogic/gates/: physical_gates.py  transversal.py
src/AtomLogic/utils/: measurements.py
tests/: test_all.py  test_pauli.py  test_physical_qubits.py
