[project]
name = "qec-simulation-on-reconfigurable-atom-arrays"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "pytest>=8.3.0",
    "pymatching>=2.3.1",
    "stim>=1.15.0",
    "tqdm>=4.67.1",
    "h5py>=3.15.1",
]
